tests/invalid/Cast_Invalid_3.whiley
type R2 is {real x}

type R1 is {int x}

function f(R2 i) -> R1:
    return (R1) i
